# flask_market

./: pyproject.toml
flask_market/: pyproject.toml
