[tool.poetry]
name = "flask-market"
version = "0.1.0"
description = ""
authors = ["wasabitools <iafcodes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
wheel = "^0.45.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
